<resources>
    <string name="app_name">书圈</string>
    <string name="mine">我的</string>
    <string name="allBook">我的书籍</string>
    <string name="allLend">我的借出</string>
    <string name="allBorrow">我的借入</string>
    <string name="more">查看更多</string>
    <string name="confirm_add_book">确认提交</string>
    <string name="locateFailed">定位失败</string>
    <string name="post">发布</string>
    <string name="booksharer">BookSharer</string>
    <string name="neighborhood">附近书圈</string>
    <!-- Strings related to login -->
    <string name="title_register">请完善以下信息以完成注册：</string>
    <string name="user_name_phone">手机/用户名</string>
    <string name="user_name">用户名</string>
    <string name="phone">手机</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="comfirm_password">确认密码</string>
    <string name="user_name_hint">用户名不能为空</string>
    <string name="phone_hint">请输入正确的手机号码</string>
    <string name="prompt_email_hint">请输入您的Email</string>
    <string name="prompt_password_hint">至少4位且不能包含特殊字符</string>
    <string name="comfirm_password_hint">请您确认密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_sign_in_success">登陆成功</string>
    <string name="error_invalid_user_name">用户名太短</string>
    <string name="error_invalid_user_name_phone">用户名太短或手机号不正确</string>
    <string name="error_repeated_user_name">用户名已存在</string>
    <string name="error_repeated_phone">该手机号已注册</string>
    <string name="error_invalid_phone">手机号错误</string>
    <string name="error_invalid_password">密码不少于4位</string>
    <string name="error_invalid_password_form">密码格式错误</string>
    <string name="error_different_password">密码不一致</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_incorrect_user">用户名或密码错误</string>
    <string name="error_field_required">不能为空</string>
    <string name="next">下一步</string>
    <string name="verification_code">验证码</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入您的昵称</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="submit_verification_code">提交验证码</string>
    <string name="error_invalid_phone_verification_code">手机和验证码不能为空</string>

    <!-- Strings related to community -->

    <string name="community_name">书圈名</string>
    <string name="community_desc">请描述你的书圈</string>
    <string name="add_community">新建书圈</string>
    <string name="owner">创建者</string>
    <string name="community_owner_name">创建者</string>
    <string name="community_position">位置</string>

    <!--String related to books-->
    <string name="bookName">书名</string>
    <string name="bookTag">类别</string>
    <string name="bookNum">数量</string>
    <string name="book_tag_default">文学</string>
    <string name="authorName">作者</string>
    <string name="bookPublisher">出版社</string>
    <string name="bookPublisheDate">出版日期</string>
    <string name="bookPrice">单价</string>
    <string name="bookISBN">ISBN</string>
    <string name="bookPic">照片</string>
    <string name="bookZhuangZhen">装帧</string>
    <string name="bookZhuangZhenDefault">平装</string>
    <string name="bookContentIntro">内容简介</string>
    <string name="bookAuthorIntro">作者简介</string>
    <string name="bookAddPic">点击上传</string>
    <string name="book_name_hint">书名不能为空</string>
    <string name="book_price_hint">单价不能为空</string>
    <string name="book_author_hint">作者不能为空</string>
    <string name="book_num_hint">数量不能为空</string>
    <string name="book_publisher_hint">出版社不能为空</string>
    <string name="book_isbn_hint">ISBN不能为空</string>
    <string name="book_contentIntro_hint">内容不得超过200字</string>
    <string name="book_authorIntro_hint">内容不得超过100字</string>
    <string name="findResult">查找结果</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
