<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Font20"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/community_name"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/community_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/community_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Font20"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/community_owner_name"
            />

        <TextView
            android:id="@+id/community_owner_name"
            style="@style/Font20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_owner_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Font20"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/community_position"
            />

        <TextView
            android:id="@+id/community_position"
            style="@style/Font20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_position"/>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/community_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_desc"
            android:inputType="textMultiLine"
            android:minLines="3"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        style="@style/common_horizontal_division_line_style"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/add_community_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/add_community"
        android:textStyle="bold"/>


</LinearLayout>